# docs/api/bff-openapi.json
@@ -18,7 +18,9 @@
                 "properties": {
                   "displayName": {
                     "type": "string",
-                    "minLength": 1
+                    "minLength": 3,
+                    "maxLength": 32,
+                    "pattern": "^[\\p{L}\\s]+$"
                   },
                   "email": {
                     "type": "string",
@@ -27,11 +29,25 @@
                   },
                   "password": {
                     "type": "string",
-                    "minLength": 8
+                    "minLength": 8,
+                    "maxLength": 64,
+                    "allOf": [
+                      {
+                        "pattern": "[A-Z]"
+                      },
+                      {
+                        "pattern": "[a-z]"
+                      },
+                      {
+                        "pattern": "[0-9]"
+                      },
+                      {
+                        "pattern": "[^a-zA-Z0-9]"
+                      }
+                    ]
                   }
                 },
                 "required": [
-                  "displayName",
                   "email",
                   "password"
                 ],
